looks almost good

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <head>
+    <title>Instagram Clone</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<body class="blue-background">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<section class="container">
 
-  Oh yeah, did we mention it's free?
+<img src="./images/phones.png" alt="iphon-picture">
+    
+<div class="float-right">
+  <header class="add-margin">
+    <img src="./images/brand.png" alt="Instagram-logo" >
+    <button type="button" class="blue-background button"> <img src="./images/home.png" alt="home" class="margin">Log in</button>
+  </header>
 
-  Download on the App Store
-  Get it on Google Play
+  <article>
+    <h1>Capture and Share <br> the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. </p>
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+    <p> Oh yeah, did we mention it's free? </p>
+  </article>
 
-  &copy; 2014 Instagram
+    <div class="img-position">
+        <img src="./images/badge-iphone.png" alt="App Store">
+        <img src="./images/badge-android.png" alt="Google Play">
+    </div>
+</div>
+
+  
+</section>
+
+<nav class="links">
+    <ul>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">API</a>
+        </li>
+        <li>
+           <a href="">Jobs</a>
+        </li>
+        <li>
+           <a href="">Privacy</a>
+        </li>
+        <li>
+           <a href="">Terms</a>
+        </li>
+        <li class="grey">
+          &copy; 2014 Instagram
+        </li>
+      </ul>
+</nav>
+
 </body>
 </html>
