--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <div class="phones">
+    <img src="images/phones.png" alt="Instagram Logo"/>
+  </div>
+  <div class="top-box">
+    <img class="logo" src="images/brand.png" alt="IG Logo"/>
+    <div class="login">
+      <img src="images/home.png"/>
+      <p class="white">Log in</p>
+    </div>
+  </div>
+  <div class="main-box">
+    <div class="text">
+      <h2 class="blue-text">Capture and Share the World's Moments</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <img class="left-tag" src="images/badge-iphone.png" alt="IG Download"/>
+    <img class="right-tag" src="images/badge-android.png" alt="IG Download"/>
+  </div>
+    <div class="bottom-box">
+      <div class="light-blue"> 
+        About Us Support Blog Press API Jobs Privacy Terms
+      </div>
+    </div>
+    <div class="light-grey">
+      &copy; 2014 Instagram
+    </div>
+  </body>
 </html>
