--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="main">
+    <div id="iPhone">
+    <img src="./images/phones.png" alt="Phone running Instagram">
+  </div>
+  <div id="text-box">
+    <div class="header"><img src="./images/brand.png" alt="Instagram brand logo">
+    <button type="submit"><img src="./images/home.png" alt="Sign in button">Log in</button>
+    </div>
+    <div class="text">
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img id = "apple-badge" src = "./images/badge-iphone.png" alt = "Download on the App Store">
+    <img id = "android-badge" src = "./images/badge-android.png" alt = "Get it on Google Play">
+  </div>
+</div>
+<footer class="navbar">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+     </ul>
+</footer>
 </body>
 </html>
