--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,6 +6,20 @@
 <body>
   Instagram
 
+  <main>
+      <div class="class-main">
+        <div class="col-main1"><img class="imag-phones" src="images/phones.png"></div>
+        <div class="col-main2">
+          <div class="col-main21">  <div class="col-main211">  <img class="img-camera" src="images/brand.png" alt="Instagram"> </div>    <div class="col-main212"> <p>  </p> </div>   </div> 
+          <div class="col-main22">
+            <div class="col-main221"><h2>Capture and Share <br> the World's Moments</h2> <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun </b> way to share your life with friends and family.</p> <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> <p>Oh yeah, did we mention it's free?</p></div>
+            <div class="col-main231"><div class="col-main2311" ><img src="images/badge-iphone.png" alt="iphone"></div> <div class="col-main2312"><img src="images/badge-android.png" alt="android"></div></div>
+          </div>
+       </div>
+  
+    
+  </div>
+  </main>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
