--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="main">
+    <div class="secondmain">
+      <div class="firstblock">
+        <img src="images/phones.png" alt="">
+      </div>
+      <div class="secondblock">
+        <div>
+            <img src="images/brand.png" alt="">
+            <button>Log in</button>      
+        </div>
+        
+        <div class="description">
+            <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose
+              a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+              Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+              
+            <img src="images/badge-iphone.png" alt="">
+            <img src="images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>
+          <a href="">About Us</a>
+        </li>
+        <li>
+          <a href="">Support</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Press</a>
+        </li>
+        <li>
+          <a href="">Press</a>
+        </li>
+        <li>
+          <a href="">API</a>
+        </li>
+        <li>
+          <a href="">Jobs</a>
+        </li>
+        <li>
+          <a href="">Privacy</a>
+        </li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
+
 </html>
