--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <header>
+      <div id="topDiv">
+          <img src="images/brand.png" alt="Instagram">
+          <div id="loginButton">
+            <img src="images/home.png">
+            <h5>Login</h5>
+          </div>      
+      </div>
+  </header>
+  
+  <section>
+    <img id="phoneImg" src="images/phones.png" alt="phones">
+    <article>
+      <h2>Capture and Share <br> the World's Moments</h2>
+      
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+      <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+        it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+        It's a new way to see the world.<br>
+      <br>
+      Oh yeah, did we mention it's free?</p>
+      
+      <div id="getAppsDiv">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </article>
+  </section>
+  
+  <div class="clear"></div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li> Terms</li>
+      <li id="grayLi"> &copy; 2014 Instagram </li>
+    </ul>
+  </footer>
 </body>
 </html>
