Tarde pero Seguro

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+    <head>
+        <meta charset="uft-8">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title> Instagram </title> 
+    </head>
 
-  Capture and Share the World's Moments
+<body> <!-- Instagram -->
+    <div class="fondoSuperior">
+        <div class="container">
+            <img src="images/phones.png" alt="smarthphone-picture " class="phone-main">
+            <img src="images/brand.png" alt="logo de Instagram" class="logoInstagram">
+            <img src="images/frame.png" alt="marco para texto" class="marcoTexto">
+            <img src="images/badge-iphone.png" alt="Apple" class="ios">
+            <img src="images/badge-android.png" alt="Android" class = "android">
+            <button><img src="images/home.png" alt="icono-home">   Log in</button>
+        </div> <!--Cierre de cajaPrincipal -->
+    </div> <!--Cierre de fondoSupeiror -->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <section>
+        <div class="titulo">
+            <h2>Capture and Share <br>
+                the World's Moments</h2>
+        </div>
+        <article>
+            <div>
+                <p class="texto">
+                    Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br>
+                    with friends and family. <br>
+                    Take a picture or video, choose a filter to transform its look <br>
+                    and feel, then post to Instagram &mdash; it's that easy. You can <br>
+                    even share to Facebook, Twitter, Tumblr and more. It's a <br>
+                    new way to see the world.<br><br>
+                    Oh yeah, did we mention it's free?<br>
+                </p>
+            </div>
+        </article>
+    </section>
+    <footer>
+        <nav>
+        <ul>
+            <li class="list"> About Us </li>
+            <li class="list"> Support </li>
+            <li class="list"> Blog </li>
+            <li class="list"> Press </li>
+            <li class="list"> API </li>
+            <li class="list"> Jobs </li>
+            <li class="list"> Privacy </li>
+            <li class="list"> Terms </li>        
+            <li class="derechos"> &copy; 2014 Instagram </li>
+        </ul>
+        </nav>
+    </footer>
 </body>
 </html>
