--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,10 @@
     </div>
     <div class="content">
       <img src="images/brand.png">
-      <img class = "right" src="images/home.png">
+      <button class = "right">
+        <img src="images/home.png">
+        Log In
+      </button>
       <div class = "words">
         <h1>Capture and Share the World's Moments</h1>
 
@@ -31,16 +34,18 @@
     <div class="clearfix">
     </div>
     <div class="bottom">
-        About Us
-        Support
-        Blog
-        Press
-        API
-        Jobs
-        Privacy
-        Terms
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
       
         &copy; 2014 Instagram
+      </ul>
         </div>
 </body>
 </html>
