day2Clone nearly done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <!-- //div 1 -->
+  <div>
+    <!-- //div2 -->
+    <div class="topDiv">
+      <!-- //div2 -->
+    </div>
 
-  Capture and Share the World's Moments
+    <!-- //div3 -->
+    <div class="bottomDiv">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <!-- //div4 -->
+      <div class="phone-div"><img class="phone-pic" src="./images/phones.png" alt="phone">
+        <!-- //div4 -->
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <!-- //div5 -->
+      <div class="right-side">
+        <!-- //div6   -->
+        <div class="logo-div">
+          <img class="instagram-brand" src="images/brand.png" alt="Instagram brand">
+          <!-- //div7 -->
+          <div class="login-container">
+            <button class="login-button"><img src="./images/home.png" alt="home">Log in</button>
+            <!-- //div7 -->
+          </div>
 
-  Oh yeah, did we mention it's free?
+          <!-- //div8 -->
+          <div class="clear-fix">
+          </div>
+          <!-- //div6 -->
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="capture-blurb">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <h2>Capture and Share <br>the World's Moments</h2>
 
-  &copy; 2014 Instagram
+          <p>Instagram is a <b>fast</b>, <b> beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <!-- //div apps -->
+          <div class="app-logos">
+
+            <img class="apple-pic" src="./images/badge-iphone.png" alt="download for Apple">
+            <img src="./images/badge-android.png" alt="download for Android">
+            <!-- //div apps  -->
+          </div>
+          <!-- //div 5 -->
+        </div>
+
+        <!-- //div end -->
+        <div class="very-end">
+          <a href="#"> About Us </a>Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+          <!-- //div end -->
+        </div>
+        <!-- //div3 -->
+      </div>
+
+      <!-- //div1 -->
+    </div>
 </body>
+
 </html>
