--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="mainContainer">
 
-  Capture and Share the World's Moments
+    <div class="upperHalf">
+      <div class="instagramLogo">
+        <img src="./images/brand.png" alt="logo instagram">
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="lowerHalf">
+      
+      <div class="lowerLeftHalf">
+        <div class="phoneImage">
+          <img src="./images/phones.png" alt="phone images">
+        </div>
+      </div>
+      
+      <div class="lowerRightHalf">
+        <div class="commentBox">
+          <div>
+            Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
+            mention it's free? Download on the App Store Get it on Google Play
+          </div>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
+  </div>
 </body>
+
 </html>
