--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="page-div">
+  <div class="top-div">
+  <div class = "brand-logo">
+  </div>
+  <a href="#" class="login-btn">Log in</a>
+</div>
+<div class="home-image">
+  <img src="./images/home.png">
+</div>
+<div class="bottom-div">
+  <div class ="left-div">
+    <img src="./images/phones.png">
+  </div>
+<div class="right-div">
+  <h2>Capture and Share the World's Moments</h2>
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends
+    and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel,
+  then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+  Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
+  <div class="app-store-btn">
+</div>
+<div class="google-play-btn">
+  </div>
+</div>
+<footer>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+&copy; 2014 Instagram</footer>
+</div>
 </body>
 </html>
