It's better but the home button, text box, and the viewing box has issues but it would easily be under plagiarism if brought to a court of law.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,14 +45,14 @@
 <div class="bottom-bar">
     <table border="0">
         <tr>
-            <th>About Us</th>
-            <th>Support</th>
-            <th>Blog</th>
-            <th>Press</th>
-            <th>API</th>
-            <th>Jobs</th>
-            <th>Privacy</th>
-            <th>Terms</th>
+            <th><a href="#">About Us</a></th>
+            <th><a href="#"> Support</a></th>
+            <th><a href="#"> Blog</a></th>
+            <th><a href="#"> Press</a></th>
+            <th><a href="#"> API</a></th>
+            <th><a href="#"> Jobs</a></th>
+            <th><a href="#"> Privacy</a></th>
+            <th><a href="#"> Terms</a></th>
             <td>&copy; 2014 Instagram</td>
         </tr>
     </table>
