me costo mucho, pero me siento orgullos

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"type="text/css"href="css/main.css">
 </head>
 <body>
-  Instagram
+<section>
+  <div id="imagenes">
+      <img id="img_tel"src="images/phones.png" alt="jajaja">
+      <img id="img_ista"src="images/brand.png" alt="najanja">
+      <div id="boton">
+        <img id="img_home"src="images/home.png" alt="qwqwqw">
+        <h6>Log in</h6>
+      </div>
+  </div>
+  <div id="promo">
+      <img id="frame"src="images/frame.png" alt="jajaja">
+      <div id="letras">
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
+        <p>
+          Instagram is a <strong> fast, gbeautiful </strong> and <strong> fun </strong>
+           way to share your life
+         <br/>
 
-  Capture and Share the World's Moments
+         with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+         <br/>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look
+          <br/>
+          and feel, then post to Instagram &mdash; it's that easy. You can
+          <br/>
+          even share to Facebook,
+          Twitter, Tumblr and more. It's a
+          <br/>
+          new way to see the world.
 
-  Oh yeah, did we mention it's free?
+        </br>
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?
+        </p>
+        <div id="imagenes_descarga">
+          <img id="icono_iphone" src="images/badge-iphone.png" alt="jajaja">
+          <img id="icono_android"src="images/badge-android.png" alt="jajajajaja">
+        </div>
+      </div>
+  </div>
 
+<di id="pie_de">
+
+<p id="letra_pie">
   About Us
   Support
   Blog
@@ -25,7 +60,12 @@
   Jobs
   Privacy
   Terms
+</p>
+<p id="letra_pie_gris">
+    &copy; 2014 Instagram
+</p>
 
-  &copy; 2014 Instagram
+</div>
+</section>
 </body>
 </html>
