--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="/home/alberto/code/week1/lab-css-instagram-clone/starter-code/css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="header">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
+<div class="section">
+<img src="phones.png"/>
+</div>
+<div class="texto">
 
-  Oh yeah, did we mention it's free?
+<h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+  <h5>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h5>
 
+  <h5>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</h5>
+
+  <h5>Oh yeah, did we mention it's free?</h5>
+<div>
+
+<div class="footer">
   About Us
   Support
   Blog
@@ -25,7 +33,8 @@
   Jobs
   Privacy
   Terms
+  2014 Instagram
+</div>
 
-  &copy; 2014 Instagram
 </body>
 </html>
