--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" href = "./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class = "page-top">
+  
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+  <div>
+	<div>
+		<img class = "phone-img" src="./images/phones.png" >
+	</div>
+	
+	<div class = "insta-pic">
+		<img src="./images/brand.png" height="100" width="400" >
+		<img src="./images/home.png"  height="40" width= "50" >
+	</div>
+		
+	<div class = "insta-frame">
+		
+		<h2 class = "insta-header"> Capture and Share the World's Moments </h2>
+			
+		<p class = "insta-text"> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+		<p class = "insta-text"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+		
+		<p class = "insta-text"> Oh yeah, did we mention it's free? </p>
+		
+	</div>
+		
+  </div>
+  	<div class = "insta-app">
+		<img src="./images/badge-iphone.png"  height= "75" width= "200" >
+		<img src="./images/badge-android.png" height="75" width= "200" >
+	</div>
 
-  Oh yeah, did we mention it's free?
+  <div class = "bottom-text">
+	About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
