--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,29 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
+<div class="background">
+    <div class="header">
+      <div>
+        <img src="images/brand.png" alt="logo">
+        </div>
+</div>
 
-  Capture and Share the World's Moments
+</div>
+<body>
+  <div class="fons">
+<img src="images/phones.png" alt="phones">
+  </div>
+  
+
+
+<div class="box1 box3">
+  <h2>Capture and Share the World's Moments</h2>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
-
+</div>
+<div class="clearfix">
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
+<ul>
+  <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+</ul>
+ 
 
   &copy; 2014 Instagram
 </body>
