--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css"/>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="top-container">
+    <div class="instagram-logo">
+      <img src="images/brand.png" alt="Instagram's logo">
+    </div>
+    <div class="home-button" >
+      <button><img src="images/home.png" alt="Back to Instagram's home screen">Log In</button>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <div class="instagram-mobile-app">
+    <img src="images/phones.png" alt="View our app on your phone.">
+    </div>
+  <div class="app-discription">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class="link-play-store">
+      <button><img src="./images/badge-android.png" alt="Click here to download on Google's Play Store."></button>
+    </div>
+    <div class="link-app-store">
+      <button><img src="./images/badge-iphone.png" alt="CLick here to download on Apple's App Store."></button>
+    </div>
+  </div>
+  
+  <div class="bottom-links">
+    <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+</ul>
+  </div>
+<foooter>&copy; 2014 Instagram</foooter>
+</div>
 </body>
 </html>
