--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="full-section">
+    <div class="main-wrapper">
+      <section class="left-img">
+        <img src="images/phones.png" alt="smartphone" class="iphone4s">
+      </section>
+      <section class="right-info">
+        <div class="main-wrapper ">
+          <img src="images/brand.png" alt="logo">
+          <button class="home-logo"><img src="images/home.png" alt="home" class="floter">Log in</button>   
+        </div>
+        <div class="container-info">
+          <h3 class="title-decoration">Capture and Share
+            <br> the World's Moments</h3>
+          <p class="text-left">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p class="text-left">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p class="text-left"> Oh yeah, did we mention it's free?</p>
+          <div class="market-images">
+            <img src="images/badge-iphone.png" alt="apple-store" class="market">
+            <img src="images/badge-android.png" alt="android-store" class="market">
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="bottom-info clear">
+    <footer>
+      <nav>
+        <ul class="bottom-list">
+          <li class="footer-elements light-font">About Us</li>
+          <li class="footer-elements light-font">Support</li>
+          <li class="footer-elements light-font">Blog</li>
+          <li class="footer-elements light-font">Press</li>
+          <li class="footer-elements light-font">API</li>
+          <li class="footer-elements light-font">Jobs</li>
+          <li class="footer-elements light-font">Privacy</li>
+          <li class="footer-elements light-font">Terms</li>
+          <l class="footer-elements light-font color-copyRight"i>&copy; 2014 Instagram</l>
+        </ul>
+      </nav>
+    </footer>
+  </section>
 </body>
 </html>
