css instagram exercice done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <section class="main-section">
+      <section class="main-article">
+        <img src="images/phones.png" alt="phones-image">
+      </section>
+      <section class="main-article">
+        <section>
+          <header>          
+            <img src="images/brand.png" alt="brand"/> 
+            <button>
+                <img src="images/home.png" alt="home" />
+            </button>
+          </header>
+        </section>
+        <article>
+            <section class="article-section">
 
-  Capture and Share the World's Moments
+          <h1>
+              Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </h1>
+          <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+              Oh yeah, did we mention it's free?
+          </p>
+        </section>
+        <section class="download-images">
+          <img src="images/badge-android.png">
+          <img src="images/badge-iphone.png">
+        </section>
+        </article>
+      </section>
+    </section>
+    <footer>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>  &copy; 2014 Instagram
+            </li>
 
-  Oh yeah, did we mention it's free?
+        </ul>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </nav>
+    </footer>  
+</div>
 </body>
 </html>
