--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="main-container">
+      <section class="main-image">
+          <img src="images/phones.png" alt="Phones image">
+      </section>
+      <div class="main-information">
+        <section class="header">
+          <div class="brand-image">
+              <img src="images/brand.png" alt="Instagram logo">
+          </div>
+          <button class="login-button">
+            <img src="images/home.png" alt="Login image">
+            Log in
+          </button>
+        </section>
+        <div class="clear"></div>
+        <section class="description">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="images/badge-iphone.png" alt="App Store button">
+          <img src="images/badge-android.png" alt="Google Play button">
+        </section>
+      </div>
+    </div>
+    <footer>
+      <ul class="footer-link">
+        <li>About Us</li>∫
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <span class="footer-info">&copy; 2014 Instagram</span>
+      </ul>
+    </footer>
+  </div>
+  
+  
+  
 </body>
 </html>
