--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+
+<html lang="en"></html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Instagram</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container main-padding">
+    <aside class="main-pic">
+      <img src="images/phones.png" alt="Phones">
+    </aside>
+    <div class="main-content">
+      <header class="main-header">
+        <img src="images/brand.png" alt="Instagram">
+        <button class="btn">
+          <img src="images/home.png" alt="Home">
+          <span>Log in</span>          
+        </button>
+      </header>
+      <section class="main-text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>        
+          <p>Oh yeah, did we mention it's free?</p>                  
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+      </section>
+    </div>
+  </div>  
+  <div class="clearfix"></div>
+  <footer class="container">
+    <nav class="footer-nav">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <span>&copy; 2014 Instagram</span>
+      </ul>
+    </nav>    
+  </footer>
+  
 </body>
 </html>
