--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="container">
+    <section class="phones">
+        <img src="images/phones.png" alt="phones" />
+    </section>
+    <section class="main-info">
+      <header class="main-header">
+        <img src="images/brand.png" alt="brand-image" />
+        <button><img src="images/home.png" alt="home" /> <span>Log in</span></button>
+      </header>
+      <section class="text">
+        <h3>Capture and Share the World's Moments</h3>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      
+        <p>Take a picture or video, choose a filter to transform its look and feel, 
+          then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, 
+          Tumblr and more. It's a new way to see the world.</p>
+      
+        <p>Oh yeah, did we mention it's free?</p>
+        <section class="buttons">
+            <a href="#" target="_blank"><img src="images/badge-iphone.png" alt="Download on the App Store" /></a>
+            <a href="#" target="_blank"><img src="images/badge-android.png" alt="Get it on Google Play" /></a>
+        </section>
+      </section>
+    </section>
+    <footer class="clear">
+      <nav class="navbar">
+        <ul>
+          <li class="navbar-item"><a href="#">ABOUT US</a></li>
+          <li class="navbar-item"><a href="#">SUPPORT</a></li>
+          <li class="navbar-item"><a href="#">BLOG</a></li>
+          <li class="navbar-item"><a href="#">PRESS</a></li>
+          <li class="navbar-item"><a href="#">API</a></li>
+          <li class="navbar-item"><a href="#">JOBS</a></li>
+          <li class="navbar-item"><a href="#">PRIVACY</a></li>
+          <li class="navbar-item"><a href="#">TERMS</a></li>
+          <li class="navbar-item">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </nav>
+    </footer>
+  </section>
 </body>
 </html>
