--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <section class="main-section">
+        <div class="main-image">
+            <img src="images/phones.png" alt="Phones">
+        </div>
+        <section class="main-content">
+          <header class="header">
+            <img class="brand-image" src="images/brand.png" alt="Instagram logo">
+            <button class="login-button"><img src="images/home.png" alt="Home icon"><span> Log in</span></button>
+          </header>
+          <div class="content">
+            <h2>Capture and Share <br/>the World's Moments</h2>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, 
+              then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+              It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="button-container">
+              <a class="btn" href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a> 
+              <a class="btn"href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
+          </div>
+        </section>
+      </section>
+      <footer class="footer">
+        <nav class="footer-nav">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><small>&copy; 2014 Instagram</small></li>
+          </ul>
+        </nav>
+      </footer>
+    </div>
+  </body>
 </html>
