--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class = "wrapper">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <header class="header">
+      <div class="image">
+          <img src="images/phones.png" alt="">
+      </div>
+     
+      <div class="main">
+        <section class="section-a"> 
+          <div class="logo">
+              <img class="img-logo" src="images/brand.png" alt="logo">
+          </div>
+          <div class="user">
+            <img class="img-home" src="images/home.png" alt="">
+            <h3 class="log-in">Log in</h3>
+          </div>
+        </section>
+        <section class="section-b">
+          <div class="info-container">
+              <h1>Capture and Share the World's Moments</h1>
+              <p> is a <span>fast beautiful</span> and <span>fun</span> way to share your life with friends and family.
+                  <br>
+                  <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the worldInstagram.
+                  <br>
+                  <br>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="images">
+              <img src="images/badge-iphone.png" alt="badge-iphone">
+              <img src="images/badge-android.png" alt="badge-android">
+          </div>
+        </section>
+      </div>
+    </header>
+    <footer class="footer";>
+        <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">API</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+          </ul>
+          <p> &copy; 2014 Instagram</p>
+    </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
 </html>
+  
