--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset=UTF-8>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div>
+    <section class="main-photo">
+      <img src="images/phones.png">
+    </section>
+    <section class="brand">
+      <img src="images/brand.png">
+    </section>
+    <section class="info">
+      <img src="images/frame.png">
+      <h3> Capture and Share the World's Moments
+      </h3>
+      <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+          Oh yeah, did we mention it's free?
+        
+          Download on the App Store
+          Get it on Google Play
+      </p>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </section>
+    <footer class="menu">
+      <nav>
+        <ul>
+          <li class= "menu-item">About Us</li>
+          <li class= "menu-item">Support</li>
+          <li class= "menu-item">Blog</li>
+          <li class= "menu-item">Press</li>
+          <li class= "menu-item">API</li>
+          <li class= "menu-item">Jobs</li>
+          <li class= "menu-item">Privacy</li>
+          <li class= "menu-item">Terms</li>
+        </ul>
+        <p> &copy; 2014 Instagram
+        </p>
+      </nav>
+    </footer>
+  </div>
 </body>
 </html>
